<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fork</string>
    <string name="action_settings">Settings</string>
    <string name="add_button">+</string>
    <string name="add_hint">New List Name</string>
    <string name="edit_hint">List Name</string>

    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete">X</string>

    <string name="action_add">Add</string>
    <string name="action_remove">Remove All</string>
    <string name="action_share">Share</string>
    <string name="action_clip">Clip</string>
    <string name="action_sort">Sort</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_move">Move</string>

    <color name="banner_colour">#404040</color>
    <color name="french_raspberry">#C72C48</color>
    <color name="raspberry_rose">#B3446C</color>
    <color name="raspberry_glass">#915F6D</color>
    <color name="dark_raspberry">#872657</color>
    <color name="tyrian_purple">#66023C</color>
    <color name="wine">#722F37</color>
    <color name="champagne">#F7E7CE</color>
    <color name="claret">#7F1734</color>
    <color name="burgundy">#800020</color>
    <color name="wine_dregs">#673147</color>

</resources>
