<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity" >
    <!--
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
        -->
    <item android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add"
        app:showAsAction="always"/>

    <item android:id="@+id/action_remove"
        android:orderInCategory="99"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_remove"
        app:showAsAction="always"/>

    <item android:id="@+id/action_share"
        android:orderInCategory="98"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="always"/>

    <item android:id="@+id/action_clip"
        android:title="@string/action_clip"
        android:orderInCategory="101"
        />

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="102"
        />

    <item android:id="@+id/action_copy"
        android:title="@string/action_copy"
        android:orderInCategory="103"
        />

    <item android:id="@+id/action_paste"
        android:title="@string/action_paste"
        android:orderInCategory="104"
        />

    <item android:id="@+id/action_move"
        android:title="@string/action_move"
        android:orderInCategory="105"
        />
</menu>
